--- a/favorite_player.html
+++ b/favorite_player.html
@@ -23,15 +23,15 @@
         <!-- .................Home Page NavBar Start ......................... -->
 
         <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
-            <div class="container-fluid">
+            <div class="container-fluid px-0">
                 <div class="row w-100">
                     <div class="col-xl-8 col-lg-8 col-md-8 col-2">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                                <li class="nav-item">
+                                <li class="nav-item ml-2">
                                     <a class="nav-link" href="#">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
@@ -79,9 +79,9 @@
         <!-- -------heading container - start -->
         <div class="container-fluid">
             <div class="row py-3">
-                <div class="col-12 ml-xl-5 pl-xl-5 pt-4">
+                <div class="col-12 pt-4">
                     <h1 class="ft_3rem-s">Favorites</h1>
-                    <p>All your favorite players.</p>
+                    <p class="ft_2rem-s">All your favorite players.</p>
                 </div>
             </div>
         </div>
@@ -90,8 +90,11 @@
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white mt-5 br_47px-s">
             <div class="row py-5">
-                <div class="col-12 py-3">
+                <div class="col-12 min_h_340px-s py-3">
                     <div class="row">
+                        <div class="col-12 text-left py-2">
+                            <h2>Players <span> (50) </span> </h2>
+                        </div>
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
                             <div class="card home_card">
                                 <div class="heart_icon">
@@ -194,104 +197,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
-                            <div class="card home_card">
-                                <div class="heart_icon">
-                                    <i class="fa fa-heart" aria-hidden="true"></i>
-                                </div>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-lg-3 col-md-3 col-3">
-                                            <img src="assets/images/Group 24.png" alt="" />
-                                        </div>
-                                        <div class="col-lg-9 col-md-9 col-9">
-                                            <div class="thamer_startrating_m">
-                                                <h4>thamer</h4>
-                                                <h6>@thamermd</h6>
-                                                <p>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0 <span class="rating_textt"> $10 </span>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="age_years_text d-flex">
-                                        <p>age (years)</p>
-                                        <p>matches</p>
-                                        <p>missed</p>
-                                        <p>missed</p>
-                                    </div>
-                                    <div class="age_years_textt d-flex">
-                                        <h2>28</h2>
-                                        <h2 class="pl-5">28</h2>
-                                        <h2 class="pl-4">28</h2>
-                                        <h2 class="pl-3">Goalkeeper</h2>
-                                    </div>
-                                    <hr class="goalkeeper_margin_b" />
 
-                                    <div class="aditya_location">
-                                        <p>
-
-                                            <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-
-                                            <span class="pull-right"> send message >> </span>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
-                            <div class="card home_card">
-                                <div class="heart_icon">
-                                    <i class="fa fa-heart" aria-hidden="true"></i>
-                                </div>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-lg-3 col-md-3 col-3">
-                                            <img src="assets/images/Group 24.png" alt="" />
-                                        </div>
-                                        <div class="col-lg-9 col-md-9 col-9">
-                                            <div class="thamer_startrating_m">
-                                                <h4>thamer</h4>
-                                                <h6>@thamermd</h6>
-                                                <p>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
-                                                    <span class="rating_textt"> $10 </span>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="age_years_text d-flex">
-                                        <p>age (years)</p>
-                                        <p>matches</p>
-                                        <p>missed</p>
-                                        <p>missed</p>
-                                    </div>
-                                    <div class="age_years_textt d-flex">
-                                        <h2>28</h2>
-                                        <h2 class="pl-5">28</h2>
-                                        <h2 class="pl-4">28</h2>
-                                        <h2 class="pl-3">Goalkeeper</h2>
-                                    </div>
-                                    <hr class="goalkeeper_margin_b" />
-
-                                    <div class="aditya_location">
-                                        <p>
-                                            <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-                                            <span class="pull-right"> send message >> </span>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
                     </div>
                 </div>
