--- a/no_favorite_player.html
+++ b/no_favorite_player.html
@@ -23,15 +23,15 @@
         <!-- .................Home Page NavBar Start ......................... -->
 
         <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
-            <div class="container-fluid">
+            <div class="container-fluid px-0">
                 <div class="row w-100">
                     <div class="col-xl-8 col-lg-8 col-md-8 col-2">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                                <li class="nav-item">
+                                <li class="nav-item ml-2">
                                     <a class="nav-link" href="#">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
@@ -79,9 +79,9 @@
         <!-- -------heading container - start -->
         <div class="container-fluid">
             <div class="row py-3">
-                <div class="col-12 ml-xl-5 pl-xl-5 pt-4">
+                <div class="col-12 pt-4">
                     <h1 class="ft_3rem-s">Favorites</h1>
-                    <p>All your favorite players.</p>
+                    <p class="ft_2rem-s">All your favorite players.</p>
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
         <!-- container for no favorite players - start -->
         <div class="container-fluid bg-white mt-5 br_47px-s">
             <div class="row py-5">
-                <div class="col py-5 text-center">
+                <div class="col py-5 min_h_340px-s text-center">
                     <p class="my-5 py-5 text-center text-break text-wrap">
                         <strong>You have not added any player in your favorite list yet.</strong>
                     </p>
