working on game invitation

--- a/game_invitation.html
+++ b/game_invitation.html
@@ -78,10 +78,14 @@
 
         <!-- -------heading container - start -->
         <div class="container-fluid">
-            <div class="row py-3">
-                <div class="col-12 ml-xl-5 pl-xl-5 pt-4">
-                    <h1 class="ft_3rem-s">Favorites</h1>
-                    <p>All your favorite players.</p>
+            <div class="row py-5 px-xl-5 justify-content-between">
+                <div class="col-md-5 col-12 align-self-center">
+                    <h1 class="ft_3rem-s"><Strong>Game Invitation</Strong></h1>
+                    <h3>Send or accept game invitations.</h3>
+                </div>
+                <div class="col-md-7 col-12 justify-content-md-end mt-md-0 mt-4 d-flex align-self-center">
+                    <a href="javascript:void(0)" class="btn bg-white br_10px-s mr-2 br_green_on_hover-s fg_light_grey-s py-4 w_216px-s"><strong><h3>Invitation</h3></strong></a>
+                    <a href="javascript:void(0)" class="btn bg-white br_10px-s ml-2 br_green_on_hover-s fg_light_grey-s py-4 w_216px-s"><strong><h3>Hire Players</h3></strong></a>
                 </div>
             </div>
         </div>
@@ -89,9 +93,17 @@
 
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white mt-5 br_47px-s">
+            <div class="row pt-5 px-xl-5">
+                <div class="col-12 d-flex fg_green-s">
+                    <h3 class="mr-2">Today,</h3>
+                    <h3 class="mx-2">26 December 2020</h3>
+                    <h3 class="ml-2"><strong>></strong></h3>
+                </div>
+            </div>
             <div class="row py-5">
                 <div class="col-12 py-3">
                     <div class="row">
+                        <div class="bg_green-s w-50 "></div>
                         <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
                             <div class="card home_card">
                                 <div class="heart_icon">
