--- a/update_password_modal.html
+++ b/update_password_modal.html
@@ -56,7 +56,7 @@
                                 <a href="javascript:void(0)" class="text-dark"><u><strong>Try another way</strong></u></a>
                             </div>
                         </div>
-                        <div class="row pt-3 pb-4 pb-5 px-2">
+                        <div class="row pt-3 pb-5 px-2">
                             <!--CANCEL button-->
                             <div class="col-6 pr-2">
                                 <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
@@ -119,7 +119,7 @@
                                 <a href="javascript:void(0)" class="text-dark"><u><strong>Resend Code</strong></u></a>
                             </div>
                         </div>
-                        <div class="row pt-3 pb-4 pb-5 px-2">
+                        <div class="row pt-3 pb-5 px-2">
                             <!--CANCEL button-->
                             <div class="col-6 pr-2">
                                 <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
@@ -174,7 +174,7 @@
                             </div>
 
                         </div>
-                        <div class="row pt-3 pb-4 pb-5 px-2">
+                        <div class="row pt-3 pb-5 px-2">
                             <!--CANCEL button-->
                             <div class="col-6 pr-2">
                                 <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100" data-dismiss="modal"><strong>CANCEL</strong></button>
