--- a/Home/home.html
+++ b/Home/home.html
@@ -41,7 +41,7 @@
                   </span> Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="../chat.html">
                                 <span>
                     <img
                       src="../assets/images/chat.svg"
@@ -67,7 +67,7 @@
             </div>
           </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="../favorite_player.html">
                                 <span>
                     <img
                       src="../assets/images/favrticon.svg"
@@ -78,7 +78,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="../game_invitation.html">
                                 <span>
                     <img
                       src="../assets/images/GameInvitation.svg"
