--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="assets/css/main.css" />
 
-    <title>chat</title>
+    <title>chat.html</title>
     <style></style>
 </head>
 
@@ -32,7 +32,7 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="Home/home.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
@@ -43,12 +43,12 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="favorite_player.html">
                                         <span><img src="assets/images/favrticon.svg" class="img-fluid" alt="navbar_fvrt" /> </span> Favorites
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="game_invitation.html">
                                         <span> <img src="assets/images/GameInvitation.svg" class="img-fluid" alt="navbar_home" /> </span> Game Invitations
                                     </a>
                                 </li>
@@ -129,8 +129,8 @@
                                             <div class="mt-3 text-center">
                                                 <span>2 Hours</span>
                                             </div>
-                                            <div class="message_count-s text-center">
-                                                <span class="fg_white-s">2</span>
+                                            <div class="message_count-s text-center ml-4">
+                                                <p class="fg_white-s mt-4 pt-2">2</p>
                                             </div>
 
                                         </div>
