--- a/football_login1.html
+++ b/football_login1.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- Latest compiled and minified CSS -->
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="assets/css/mina.css">
-     <link rel="stylesheet" type="text/css" href="http://www.shieldui.com/shared/components/latest/css/light-bootstrap/all.min.css" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/mina.css">
+    <link rel="stylesheet" type="text/css" href="http://www.shieldui.com/shared/components/latest/css/light-bootstrap/all.min.css" />
     <title>football Login</title>
 </head>
+
 <body class="background_img-s">
     <div class="container-fluid">
         <div class="row my-md-5 my-4 mx-xl-5 mx-lg-3 mx-0">
@@ -34,17 +36,17 @@
                         <ul class="navbar-nav ">
                             <!--home-->
                             <li class="nav-item pr-xl-5 pl-xl-0 px-3">
-                              <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s  pl-0" href="javascript:void(0)">Home</a>
+                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s  pl-0" href="Home/home.html">Home</a>
                             </li>
                             <!--about-->
                             <li class="nav-item px-xl-5 px-3">
-                              <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="javascript:void(0)">About</a>
+                                <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="javascript:void(0)">About</a>
                             </li>
                             <!--contacts-->
                             <li class="nav-item px-xl-5 px-3">
                                 <a class="nav-link text-white fs_19px-s green_bottom_on_hover-s pl-0" href="javascript:void(0)">Contacts</a>
                             </li>
-                        </ul>    
+                        </ul>
                     </div>
                 </nav>
             </div>
@@ -61,7 +63,7 @@
             <!--for large to medium screen-->
             <div class="col-xl-5 col-lg-7 col-8 ml-auto d-none d-md-block">
                 <div>
-                    <h1 >Find The</h1>
+                    <h1>Find The</h1>
                 </div>
                 <div>
                     <h1 class="fg_light_green-s fs_90px-s ">FOOTBALL PLAYERS</h1>
@@ -70,7 +72,9 @@
                     <h1 class="fs_40px-s">Base on Positions</h1>
                 </div>
                 <div class="row">
-                    <div class="col-6"><hr  class="bg-white "></div>
+                    <div class="col-6">
+                        <hr class="bg-white ">
+                    </div>
                 </div>
                 <div>
                     <h2 class="opacity_60-s">or buy Gears for players</h2>
@@ -101,7 +105,7 @@
             <!--for Samll Screen-->
             <div class="col-12 d-md-none text-white text-center d-block">
                 <div>
-                    <h5 >Find The</h5>
+                    <h5>Find The</h5>
                 </div>
                 <div>
                     <h1 class="fg_light_green-s fs_33px_on_sm-s">FOOTBALL PLAYERS</h1>
@@ -154,7 +158,7 @@
                     <a href="javascript:void(0)" class="text-white">Forgot Password?</a>
                 </div>
                 <!--login button-->
-                <button type="submit" class="btn bg_green-s w-100 br_10px-s text-white py-3 mt-5 mb-5">Log In</button>
+                <a href="Home/home.html" role="button" type="submit" class="btn bg_green-s w-100 br_10px-s text-white py-3 mt-5 mb-5">Log In</a>
                 <!--signup option-->
                 <div class=" text-center pt-xl-5 pt-2">
                     <span class="text-white">Don't have an account? <a href="javascript:void(0)" class="text-white">Sign Up</a>.</span>
@@ -164,7 +168,7 @@
         </div>
 
     </div>
-    
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
 
