--- a/favorite_player.html
+++ b/favorite_player.html
@@ -32,12 +32,12 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                                 <li class="nav-item ml-2">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="Home/home.html">
                                         <span><img src="assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="chat.html">
                                         <span><img src="assets/images/chat.svg" class="img-fluid" alt="navbar_chat" /></span> Chat
                                     </a>
                                 </li>
@@ -48,7 +48,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="game_invitation.html">
                                         <span> <img src="assets/images/GameInvitation.svg" class="img-fluid" alt="navbar_home" /> </span> Game Invitations
                                     </a>
                                 </li>
