complete about us and term and conditions screens

--- a/edit_profile.html
+++ b/edit_profile.html
@@ -48,13 +48,15 @@
 
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white mt-5 br_47px-s">
-            <div class="row pt-5 px-xl-5">
-                <div class="col-12 text-center">
+            <div class="row pt-5 px-xl-5 justify-content-center">
+                <div class="col-2 text-center">
+                    <img src="assets/images/edit_profile.svg" class="position-absolute" alt="edit profile icon">
                     <img src="assets/images/user_img.png" width="128" class="border_green-s rounded-circle" alt="player img">
+                    
                 </div>
             </div>
             <div class="row p-t-2 pb-5 pr-xl-5 pr-3">
-                <!-- <form action=""> -->
+                <form action="" class="d-flex">
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
                             <label for="first_name-d"><strong><h4>FIRST NAME</h4></strong></label>
@@ -73,6 +75,7 @@
                             <input type="text" class="form-control form-control-lg User_name-t rounded" value="@ahmadjamele" id="first_name-d" placeholder="User Name">
                         </div>
                     </div>
+                </form>    
                     <div class="col-lg-4 col-md-6 col-12 pt-3">
                         <div class="form-group">
                             <label for="date_of_birth-d"><strong><h4>DATE OF BIRTH</h4></strong></label>
@@ -91,7 +94,7 @@
                             <input type="number" class="form-control form-control-lg price-t rounded" value="$ 10" id="price-d" placeholder="price">
                         </div>
                     </div>
-                <!-- </form> -->
+                
             </div>    
 
         </div>
