--- a/term_and_condition.html
+++ b/term_and_condition.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/main.css"/>
-    <title>About Us</title>
+    <title>Term & conditions</title>
 </head>
 
 <body class="bg_img-s">
     <!-- .................Home Page Start ......................... -->
-    <div class="container-fluid px-0 mx-0 ">
+    <!-- <div class="container-fluid px-0 mx-0 "> -->
         <!-- .................Home Page NavBar Start ......................... -->
 
 
@@ -25,7 +25,7 @@
                     <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
                         <h1 class="pr-2">More</h1>
                         <h1 class="px-2"><strong>/</strong></h1>
-                        <h1 class="fg_green-s pl-2">About Us</h1>
+                        <h1 class="fg_green-s pl-2">Term & Conditions</h1>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
                         <div class="">
@@ -45,37 +45,38 @@
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white mt-5 br_47px-s mh_86vh-s">
             <div class="row pt-5 px-xl-4">
-                <div class="col-6">
-                    <img src="assets/images/black_logo.svg" width="100" class="" alt="Logo">
-                    <div class="position-absolute logo_text-s text-white"><h5><h3>LOGO</h3></h5></div>
-                </div>
-                <div class="col-6 justify-content-end align-self-center d-flex">
-                    <div class="px-2">
-                        <a href="javascript:void(0)" class=""><img src="assets/images/tweeter.svg" alt="tweeter logo"></a>
-                    </div>
-                    <div class="px-2">
-                        <a href="javascript:void(0)"><img src="assets/images/insta.svg" alt="insta logo"></a>
-                    </div>
-                    <div class="px-2">
-                        <a href="javascript:void(0)"><img src="assets/images/facebook.svg" alt="facebook logo"></a>
-                    </div>
-                    <div class="px-2">
-                        <a href="javascript:void(0)"><img src="assets/images/linkedin.svg" alt="linkedin logo"></a>
-                    </div>
+                <div class="col-12 mt-3 d-flex fg_green-s">
+                    <h3 class="mr-2">Last Updated:</h3>
+                    <h3 class="mx-2">2 January 2021</h3>
                 </div>
             </div>
             <div class="row py-5 px-xl-4">
                 <div class="col-12">
                     <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                </div>
-                <div class="col-12">
                     <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-                </div>
-            </div>    
-
+                    <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                </div>    
+            </div>   
         </div>
+        <footer class="page-footer ">
+            <div class="container-fluid bg_light_grey-s">
+                <div class="row  py-4">
+                    <div class="col-lg-6 col-12 align-self-center">
+                        <div class="form-check fs_18px-s">
+                            <input type="checkbox" class="form-check-input h_21px-s" id="term_and_condition-d" >
+                            <label class="form-check-label ml-3" for="term_and_condition-d"><strong>I have read and accept the term and conditions.</strong></label>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-12 d-flex justify-content-md-end pt-lg-0 pt-3">
+                        <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 px-5 mr-2 w_184px-s" ><strong>DECLINE</strong></button>
+                        <button type="submit" class="btn bg-white br_10px-s py-3 fg_green-s px-5 ml-2 w_184px-s"><strong>ACCEPT</strong></button>
+                    </div>
+                </div>
+            </div> 
+        </footer>
         <!-- container for favorite players - end -->
-    </div>
+
+    <!-- </div> -->
     <!-- .................Home Page End ......................... -->
     <script src="assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
