--- a/help.html
+++ b/help.html
@@ -43,123 +43,126 @@
 
 
         <!-- container for favorite players - start -->
-        <div class="container-fluid bg-white mt-5 br_47px-s mh_86vh-s">
+        <div class="container-fluid bg-white mt-5 br_47px-s mh_86vh-s"> 
+          <label class="chat_button-s"> 
+            <img src="assets/images/bot_chat.svg" id="chat_icon-d"  alt="chat icon">
+           </label>
+            <div class="wrapper  border br_10px-s d-none" id="wrapper-d">
+                <div class="chat_header-s fg_green-s border-bottom p-3">
+                    <h6 class="mb-0">Wellcome to the chatBot</h6>
+                </div>
+            </div>
+
             <div class="row pt-5 px-xl-4">
                 <div class="col-12">
                     <h1 class="fg_green-s">FAQs</h1>
                 </div>
             </div>
             <div class="row py-5 px-xl-4">
-                <div class="col-12">
-                    <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                <div class="col-12">   
+                  <div class="accordion" id="help_accordion-d">
+                    <div class="card border-0">
+                      <div class="card-header border-0 bg-white px-0 d-flex justify-content-between" id="benefits-d">
+                        <button class="btn btn-link btn-block px-0 text-left text-dark focus_none-s button_click-s td_none-s d-flex justify-content-between" type="button" data-toggle="collapse" data-target="#benefits_content-d" aria-expanded="true" aria-controls="benefits_content-d">
+                          <div>
+                            <strong>What are the benefits?</strong>
+                          </div>
+                          <div class=" text-right img_div-s">
+                            <img src="assets/images/arrow_up.svg" class="dropdown_img-s" alt="">
+                          </div>
+                        </button> 
+                      </div>
+                      <div id="benefits_content-d" class="collapse show" aria-labelledby="benefits-d" data-parent="#help_accordion-d">
+                        <div class="card-body px-0">
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                      <hr>
+                    </div>
+                    <div class="card border-0">
+                      <div class="card-header border-0 px-0 bg-white" id="remove_Account-d">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link btn-block px-0 text-left d-flex justify-content-between button_click-s collapsed text-dark focus_none-s td_none-s" type="button" data-toggle="collapse" data-target="#remove_Account_content-d" aria-expanded="false" aria-controls="remove_Account_content-d">
+                            <div>
+                              <strong>How to remove account?</strong>
+                            </div>
+                            <div class="text-right img_div-s">
+                              <img src="assets/images/arrow_down.svg" class="dropdown_img-s" alt="">
+                            </div>
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="remove_Account_content-d" class="collapse" aria-labelledby="remove_Account-d" data-parent="#help_accordion-d">
+                        <div class="card-body px-0">
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                      <hr>
+                    </div>
+                    <div class="card border-0">
+                      <div class="card-header border-0 px-0 bg-white" id="app_work-d">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link px-0 btn-block text-left collapsed text-dark focus_none-s td_none-s d-flex justify-content-between button_click-s" type="button" data-toggle="collapse" data-target="#app_work_content-d" aria-expanded="false" aria-controls="app_work_content-d">
+                            <div>
+                              <strong>How this app works?</strong>
+                            </div>
+                            <div class="text-right img_div-s">
+                              <img src="assets/images/arrow_down.svg" class="dropdown_img-s" alt="">
+                            </div>
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="app_work_content-d" class="collapse" aria-labelledby="app_work-d" data-parent="#help_accordion-d">
+                        <div class="card-body px-0">
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                      <hr>
+                    </div>
+                    <div class="card border-0">
+                      <div class="card-header border-0 bg-white px-0" id="when_used-d">
+                        <h2 class="mb-0">
+                          <button class="btn btn-link btn-block px-0 text-left collapsed text-dark focus_none-s td_none-s d-flex justify-content-between button_click-s" type="button" data-toggle="collapse" data-target="#when_used_content-d" aria-expanded="false" aria-controls="when_used_content-d">
+                            <div>
+                              <strong>When can be used?</strong>
+                            </div>
+                            <div class="text-right img_div-s">
+                              <img src="assets/images/arrow_down.svg" class="dropdown_img-s" alt="">
+                            </div>
+                          </button>
+                        </h2>
+                      </div>
+                      <div id="when_used_content-d" class="collapse" aria-labelledby="when_used-d" data-parent="#help_accordion-d">
+                        <div class="card-body px-0">
+                          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                      <hr>
+                    </div>
+                  </div>
                 </div>
-                <div class="col-12">
-                </div>    
-<!--Accordion wrapper-->
-<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-
-    <!-- Accordion card -->
-    <div class="card">
-  
-      <!-- Card header -->
-      <div class="card-header" role="tab" id="headingOne1">
-        <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
-          aria-controls="collapseOne1">
-          <h5 class="mb-0">
-            Collapsible Group Item #1 <i class="fas fa-angle-down rotate-icon"></i>
-          </h5>
-        </a>
-      </div>
-  
-      <!-- Card body -->
-      <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1"
-        data-parent="#accordionEx">
-        <div class="card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-          wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-          eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-          assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-          nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-          farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-          labore sustainable VHS.
-        </div>
-      </div>
-  
-    </div>
-    <!-- Accordion card -->
-  
-    <!-- Accordion card -->
-    <div class="card">
-  
-      <!-- Card header -->
-      <div class="card-header" role="tab" id="headingTwo2">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2"
-          aria-expanded="false" aria-controls="collapseTwo2">
-          <h5 class="mb-0">
-            Collapsible Group Item #2 <i class="fas fa-angle-down rotate-icon"></i>
-          </h5>
-        </a>
-      </div>
-  
-      <!-- Card body -->
-      <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2"
-        data-parent="#accordionEx">
-        <div class="card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-          wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-          eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-          assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-          nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-          farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-          labore sustainable VHS.
-        </div>
-      </div>
-  
-    </div>
-    <!-- Accordion card -->
-  
-    <!-- Accordion card -->
-    <div class="card">
-  
-      <!-- Card header -->
-      <div class="card-header" role="tab" id="headingThree3">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
-          aria-expanded="false" aria-controls="collapseThree3">
-          <h5 class="mb-0">
-            Collapsible Group Item #3 <i class="fas fa-angle-down rotate-icon"></i>
-          </h5>
-        </a>
-      </div>
-  
-      <!-- Card body -->
-      <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3"
-        data-parent="#accordionEx">
-        <div class="card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-          wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-          eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-          assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-          nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-          farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-          labore sustainable VHS.
-        </div>
-      </div>
-  
-    </div>
-    <!-- Accordion card -->
-  
-  </div>
-  <!-- Accordion wrapper --
-                </div>
-            </div>    
+            </div> 
+            <!-- <div class="row">
+              <div class="col-12 text-right">
+                <img src="assets/images/bot_chat.svg" class="sticky-bottom" alt="chat icon">
+              </div>
+            </div>   -->
 
         </div>
         <!-- container for favorite players - end -->
     </div>
     <!-- .................Home Page End ......................... -->
-    <script src="assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-</body>
+    <script type="text/javascript" src="assets/js/main.js"></script>
+  </body>
 
 </html>
